# enph353-drone-desc

./: CMakeLists.txt  drone.launch  drone.urdf  drone.urdf.xacro  package.xml  urdf_to_xacro.py
assets/: link_camera.part  link_motor_fl.stl  link_motor_rl.stl  link_motor_rr.part  package.xml
cad_src/: config.json  drone.urdf
cad_src/assets/: link_camera.stl  link_drone_body.stl  link_motor_fl.part  link_motor_fr.part  link_motor_rl.part  link_motor_rr.stl  link_rotor_fl.part  link_rotor_fl.stl  link_rotor_fr.part  link_rotor_fr.stl  link_rotor_rl.part  link_rotor_rr.part  link_rotor_rr.stl
drone_xacro_template/: drone_template.xacro
launch/: drone.launch  drone_spawn.launch
meshes/: link_camera.part  link_drone_body.part  link_drone_body.stl  link_imu.part  link_imu.stl  link_motor_fr.part  link_motor_fr.stl  link_motor_rl.part  link_motor_rr.part  link_rotor_fl.part  link_rotor_fr.part  link_rotor_rl.stl
onshape-to-urdf-raw/assets/: link_drone_body.part  link_imu.part  link_motor_fl.part
scripts/: drone.py  drone_cmd_bridge.py  drone_vert_mov.py  urdf_to_xacro.py
urdf/: drone.urdf.xacro  drone_template.xacro  old_drone.urdf.xacro
